Fixing overflow bug on landing

--- a/src/scss/Landing.scss
+++ b/src/scss/Landing.scss
@@ -3,7 +3,7 @@
 .landing{
   background-image: url($mobile);
   background-repeat: no-repeat;
-  height: 100vh;
+  height: 100%;
   background-size: cover;
   background-position: center;
   background-attachment: fixed;
